Fix tile small image when too large
Tile small image was resized instead of cropped.

--- a/src/components/tile/tile.scss
+++ b/src/components/tile/tile.scss
@@ -213,8 +213,6 @@ opl-tile {
 
   .opl-content {
     height: 100%;
-    background-size: contain;
-    background-repeat: no-repeat;
   }
 
   /*
